# vortex

./: CMakeLists.txt
benchmark/: client.py  run_encoder_example.cpp
benchmark/pipeline_client/: full_pipeline_client.py  test_doc_gen_client.py
benchmark/setup/: object_pools.list
cfg/: dfgs.json.tmp  layout.json.tmp
data/perf_data/: dim_shift.py
scripts/: cpu-gpu-monitor.sh  gpu_test.py
vortex_udls/: CMakeLists.txt  aggregate_udl.cpp  aggregate_udl.hpp  serialize_utils.cpp  serialize_utils.hpp
vortex_udls/python/: python_udl_manager.cpp
vortex_udls/python/python_udls/: doc_generate_udl.py  encode_search.py  encode_udl.py  encoder_udl.py  hash_udl.py  pipeline2_mon_udl.py  pyudl_serialize_utils.py  qa_check_batch_udl.py  qa_check_two_udl.py  qa_check_udl.py  sample_udl.py  text_to_speech_udl.py
